# npack

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING md  makefile
.devcontainer/: devcontainer.json
bundler/: biome.json  index.js  package-lock.json  package.json
bundler/dev/: encrypt.js  generateVFSCode.js  runtime-loader.js
example/: index.js  package.json
example/config/: app.json
example/data/: sample.txt
example/migrations/: 001_init.sql  002_users.sql
example/templates/: email.html
src/: config.rs  main.rs
