[package]
name = "npack"
version = "0.1.0"
edition = "2021"
authors = ["Satoru Fujinuma"]
description = "Cross-platform Node.js application packager"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
tempfile = "3.10"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
base64ct = "=1.6.0"

[[bin]]
name = "npack"
path = "src/main.rs"